--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "flowbite": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.2.1",
